objects/Product_Platform__c.object
<CustomObject>
    <description>This object is used for epm data</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used to store EPM data</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatformCategorySortOrder__c</fullName>
        <description>DPS-20818 Used upstream to drive how marketing displays features and benefits by Platform Category (aka DBCats Category)</description>
        <label>Platform Category Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlatformSortOrder__c</fullName>
        <description>DPS-20818 Used upstream to drive how marketing displays features and benefits by Platform Group (aka DBCats Group)</description>
        <label>Platform Group Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_Category_Benefit__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Platform Category Benefit</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Category_Feature__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Platform Category Feature</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Category__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Platform Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>50 state surveys</fullName>
                </value>
                <value>
                    <fullName>Access to cited materials</fullName>
                </value>
                <value>
                    <fullName>Access to court rule authority on Westlaw</fullName>
                </value>
                <value>
                    <fullName>Address maps</fullName>
                </value>
                <value>
                    <fullName>Administrative decisions &amp; guidance</fullName>
                </value>
                <value>
                    <fullName>Alerts</fullName>
                </value>
                <value>
                    <fullName>American Maritime cases</fullName>
                </value>
                <value>
                    <fullName>Annotated standard documents</fullName>
                </value>
                <value>
                    <fullName>Appellate briefs</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Australia topics &amp; resources</fullName>
                </value>
                <value>
                    <fullName>Authority complier</fullName>
                </value>
                <value>
                    <fullName>Automated documents</fullName>
                </value>
                <value>
                    <fullName>Brief bank</fullName>
                </value>
                <value>
                    <fullName>BriefTools</fullName>
                </value>
                <value>
                    <fullName>Business law center</fullName>
                </value>
                <value>
                    <fullName>Business transactions solution: document assembly</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>California essentials: document assembly</fullName>
                </value>
                <value>
                    <fullName>California general practice: document assembly</fullName>
                </value>
                <value>
                    <fullName>California judicial counsel forms: document assembly</fullName>
                </value>
                <value>
                    <fullName>California jury instructions: document assembly</fullName>
                </value>
                <value>
                    <fullName>Capitol watch</fullName>
                </value>
                <value>
                    <fullName>Case evaluator</fullName>
                </value>
                <value>
                    <fullName>Case notebook (hosted)</fullName>
                </value>
                <value>
                    <fullName>Case notebook (installed)</fullName>
                </value>
                <value>
                    <fullName>Cases, headnotes, &amp; West key number system®</fullName>
                </value>
                <value>
                    <fullName>CCH</fullName>
                </value>
                <value>
                    <fullName>Checklists</fullName>
                </value>
                <value>
                    <fullName>Cite formatting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Group__c</fullName>
        <label>Platform Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Case Notebook</fullName>
                </value>
                <value>
                    <fullName>Drafting Assistant</fullName>
                </value>
                <value>
                    <fullName>Firm Central Practice Management</fullName>
                </value>
                <value>
                    <fullName>Practical Law Know-How &amp; Guidance</fullName>
                </value>
                <value>
                    <fullName>Specialty Offerings</fullName>
                </value>
                <value>
                    <fullName>Westlaw Edge</fullName>
                </value>
                <value>
                    <fullName>Westlaw Form Builder</fullName>
                </value>
                <value>
                    <fullName>Westlaw Litigation</fullName>
                </value>
                <value>
                    <fullName>Westlaw Primary Law</fullName>
                </value>
                <value>
                    <fullName>Westlaw Public Records</fullName>
                </value>
                <value>
                    <fullName>Westlaw Secondary Sources/Analytical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>Field is used to store EPM data</description>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Platform</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Product Platform Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Platforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>